Fix overflow issues for purple start on home and category pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,6 +28,10 @@ p {
     font-size: 1.1rem;
 }
 
+.row-hide {
+    overflow: hidden;
+}
+
 .links-container {
     display: flex;
     flex-direction: row;
